Fix #130760: Grease Pencil: Group channel crash

Crash was fixed in 301b2ae183 but re-introduced due to changes done in
the commit 822907a68d : Macro to create channel for object data-block had
been moved outside of the `if` block.

Also fixes #130753.

Pull Request: https://projects.blender.org/blender/blender/pulls/130787